# steamstats-mcp

./: .gitignore  LICENSE  README.md  SPECIFICATION_PLAN.md  main.py  pyproject.toml
.roo/: .clinerules  mcp.json
app/: config.py  main.py  models.py
app/api/endpoints/: steam_tools.py
app/core/: exceptions.py
app/utils/: steam_api.py
specs/: STEAMSTATS_MCP_SPECIFICATION.md  endpoints.md
