[project]
name = "steamstats-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.4",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.1",
    "mcp>=1.1.3", # Use the correct package name 'mcp' and a version from reference
]
